Fix handle file count: counting was not recursively, it computed a single nesting level for a given directory